# blake2b_halo2_integration

./: Cargo.toml
benches/: pk_generation.rs  proof_generation.rs  utils.rs  verification.rs  vk_generation.rs
examples/: interface.rs
src/: lib.rs
src/base_operations/: mod.rs
src/blake2b/: blake2b_chip.rs  blake2b_instructions.rs  mod.rs  utils.rs
src/tests/: mod.rs
src/tests/test_blake2b/: smoke_tests.rs  variable_key_length_tests.rs  variable_output_length_tests.rs  vector_tests.rs
src/tests/test_negate/: mod.rs  negate_circuit.rs
src/tests/tests_addition/: addition_mod_64_circuit_8bits.rs  addition_mod_64_circuit_8bits_autogenerated.rs  test_addition_mod_64_with_autogenerated_trace.rs  test_addition_mod_64_with_processed_trace.rs
src/tests/tests_rotation/: limb_rotation_circuit.rs  limb_rotation_circuit_autogenerated.rs  rotation_63_circuit_8bit_limbs.rs  rotation_63_cirtuit_8bit_limbs_autogenerated.rs  test_limb_rotation_16_24_32.rs  test_limb_rotation_16_24_32_autogenerated.rs  test_rotation_63_8_bit_limbs.rs  test_rotation_63_8_bit_limbs_autogenerated.rs
src/tests/tests_xor/: tests_xor_with_generated_trace.rs  tests_xor_with_processed_trace.rs  xor_circuit.rs  xor_circuit_autogenerated.rs
src/types/: bit.rs  blake2b_word.rs  byte.rs  mod.rs  row.rs
src/usage_utils/: blake2b_circuit.rs  circuit_runner.rs
