[package]
name = "blake2b_halo2"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
ff = "0.13"
# temporary import of midnight-proofs, for the whole project to compile. Will be updated using the syntax commented below (with the correct tag) once the latest tag is out.
midnight-proofs = { git = "https://github.com/midnightntwrk/midnight-zk.git", branch = "main", default-features = false, features = [
    "bits",
    "circuit-params",
    "committed-instances",
] }
# midnight-proofs = { git = "https://github.com/midnightntwrk/midnight-zk.git", tag = "midnight-proofs-v0.5.1", default-features = false, features = [
#     "bits",
#     "circuit-params",
#     "committed-instances",
# ] }
rand = "0.8"
hex = "0.4.3"
num-bigint = "0.4"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "csv_output"] }
blake2-rfc = "0.2.18"

[profile.bench]
lto = "fat"

[[bench]]
name = "mocked_proving"
harness = false

[[bench]]
name = "vk_generation"
harness = false

[[bench]]
name = "pk_generation"
harness = false

[[bench]]
name = "proof_generation"
harness = false

[[bench]]
name = "verification"
harness = false
